sane JVM options